2 lab/k8s/UserService/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: userservice-service
spec:
  type: ClusterIP 
  ports:
    - port: 8080         # порт по якому можна звератись до сервісу
      targetPort: 80 # порт контейнера
  selector:
    app: userservice
